poner los distritos

--- a/libro.html
+++ b/libro.html
@@ -942,7 +942,12 @@
                 case 128:
                     provincia="Lima"
                     break;
-            
+                case 134:
+                    provincia="Huarochiri"
+                    break;
+                case 67:
+                    provincia="Callao"
+                    break;
                 default:
                     break;
             }
